...
    <string name="interval">Interval</string>
    <string name="google_drive">Google Drive™</string>
    <string name="dropbox">Dropbox</string>
    <string name="notes">Notes</string>
    <string name="task">Task</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="show_in_status_bar">Show in status bar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_reminder">Add reminder?</string>
    <string name="name">Name</string>
    <string name="background">Background</string>
...
    <string name="dark">Dark</string>
    <string name="x_out_of_x" formatted="false">%d out of %d</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="log_in">Log In</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="open_app">Open app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="opacity">Opacity</string>
    <string name="weeks">weeks</string>
    <string name="seconds">seconds</string>
    <string name="_minutes">minutes</string>
    <string name="_hours">hours</string>
...
    <string name="acc_contact_photo">Photo of the contact</string>
    <string name="acc_button_snooze">Snooze</string>
    <string name="acc_select_number_from_contacts">Select number from contacts</string>
    <string name="acc_select_color">Select color</string>
    <string name="acc_add_image_to_reminder">Add image to reminder</string>
    <string name="acc_add_reminder">Add reminder</string>
    <string name="acc_add">Add</string>
    <string name="acc_select_application">Select application</string>
    <string name="acc_type_by_voice">Type text by voice</string>
    <string name="reminder_channel">Reminder channel</string>
    <string name="default_reminder_notifications">Default reminder notifications</string>
    <string name="note_channel">Note channel</string>
    <string name="default_note_notifications">Default note notifications</string>
...
    <string name="repeat_weekly_days">Weekly: %1$s</string>
    <string name="repeat_monthly_day">Monthly on day %1$d</string>
    <string name="repeat_weekdays_required">Select at least one day</string>
    <string name="step_of_count">Step %1$d of %2$d</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="skip_step">Skip</string>
    <string name="complete_step">Complete step</string>
    <string name="previous_step">Previous step</string>
    <string name="add_one_minute">+1 min</string>
    <string name="routine_finished_title">Routine finished</string>
    <string name="routine_execution_total_time">Total time: %1$s</string>
    <string name="routine_execution_steps_completed">%1$d of %2$d steps completed</string>
...
