...
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remind_me"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:maxLines="6"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

            <com.elementary.tasks.core.views.TimerPickerView
                android:id="@+id/timerPickerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

...
